--- a/projects/VS2012/Plugins/AgtGCF.vcxproj.filters
+++ b/projects/VS2012/Plugins/AgtGCF.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="$(PluginSrc)\AgtGCF\Ellipse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="$(PluginSrc)\AgtGCF\GCF.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -34,6 +37,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="$(PluginSrc)\AgtGCF\GCFVisAgent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(PluginSrc)\AgtGCF\GCFVisAgentFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -65,10 +71,8 @@
     <ClInclude Include="$(PluginSrc)\AgtGCF\GCFVisAgent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="$(PluginSrc)\AgtGCF\Ellipse.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="$(PluginSrc)\AgtGCF\GCFVisAgentFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
